--- a/readme
+++ b/readme
@@ -1,1 +1,2 @@
-
+ok hello everyone, good to see you all ,Thanks 
+This is my first docment on Github ,so fogive me ,I was really be a noob， hope learn quic.
